# adaptive-strategy-rl

./: .gitignore  .gitmodules  README.md  requirements.txt
proof_of_concept/: config.py  env_wrapper.py  evaluate.py  networks.py  ppo.py  train.py  utils.py
results/poc/: eval_results.csv
rocket_league/: CMakeLists.txt  README.md  build.bat  train.bat
rocket_league/monitor/: server.py
rocket_league/monitor/static/: app.js  index.html  style.css
rocket_league/src/: CustomRewards.h  StrategyConfig.h  StrategyObsBuilder.h  StrategyReward.h  main.cpp
